--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,146 @@
-.App {
+/* Reset */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body, html {
+  width: 100%;
+  height: 100%;
+  line-height: 1;
+  font-family: 'Impact', sans-serif; 
+}
+
+body {
+  background-color: #000000;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+}
+
+
+.App-header {
+  background: rgba(146, 16, 16, 0.194); 
+  backdrop-filter: blur(30px); 
+  padding: 20px 0;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App-header h1 {
+  color: #ff5d5d;
+  font-size: 2.5em;
+  margin-bottom: 0.6em;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App-header p {
+  margin-bottom: 0.5em;
+  color: #dedede; 
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+.main-content {
+  flex: 1;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 20px;
+  margin-top: 150px;
 }
 
-.App-link {
-  color: #61dafb;
+.instructions {
+  flex-basis: 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-right: 50px;
+  color: #fdb6b6; 
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.instructions p {
+  margin-bottom: 10px;
+}
+
+
+.svg-container {
+  flex-basis: 30%;
+  text-align: center;
+}
+
+.svg-container svg {
+  max-width: 40vh;
+  height: auto;
+}
+
+
+.color-picker-container {
+  flex-basis: 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-left: 50px; /* Space between SVG and color picker */
+}
+
+
+.button {
+  background: rgba(255, 255, 255, 0.1); /* Glassy buttons */
+  color: #fff;
+  border: 1px solid rgba(255, 255, 255, 0.2); /* Slight border for depth */
+  border-radius: 4px;
+  padding: 10px 20px;
+  margin-top: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.3s, box-shadow 0.3s;
+  white-space: nowrap;
+}
+
+.button:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+  box-shadow: 0 4px 15px rgba(255, 255, 255, 0.6); 
+  transform: translateY(-2px);
+}
+
+.download-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+
+.footer {
+  padding: 20px;
+  background: rgb(0, 0, 0);
+  backdrop-filter: blur(10px); 
+  color: #f0f0f0;
+  text-align: center;
+}
+
+@media (max-width: 768px) {
+  .main-content {
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
+
+  .instructions, .color-picker-container {
+    padding-right: 0;
+    padding-bottom: 20px;
+    align-items: center;
   }
+
+  .svg-container svg {
+    max-width: 80vw;
+  }
+
+  .download-buttons {
+    flex-direction: column;
+  }
+}
+.twitter-link {
+  color: #1DA1F2; 
+  text-decoration: none; 
+  transition: color 0.3s; 
+}
+
+.twitter-link:hover {
+  color: #0d8cd2;
 }
